# urban-giggle

./: .clang-format  .clang-tidy  .gitignore  build.gradle.kts  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts
app/src/androidTest/java/com/shenmo/mineraft_toolbox/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native-lib.hpp
app/src/main/cpp/include/Keystone/includes/: arm.h  arm64.h  evm.h  hexagon.h  keystone.h  mips.h  ppc.h  riscv.h  sparc.h  systemz.h  x86.h
app/src/main/cpp/include/KittyMemory/: KittyArm64.cpp  KittyArm64.hpp  KittyMemory.cpp  KittyMemory.hpp  KittyScanner.cpp  KittyScanner.hpp  KittyUtils.cpp  KittyUtils.hpp  MemoryBackup.cpp  MemoryBackup.hpp  MemoryPatch.cpp  MemoryPatch.hpp  writeData.hpp
app/src/main/cpp/include/Lua/: lua.c
app/src/main/cpp/include/frida-gum/: frida-gum.h
app/src/main/cpp/include/imgui/backends/: imgui_impl_android.cpp  imgui_impl_android.h  imgui_impl_opengl3.cpp
app/src/main/cpp/include/imgui/misc/single_file/: imgui_single_file.h
app/src/main/cpp/src/Init/: Init.cpp  Init.hpp
app/src/main/cpp/src/Instance/: Instance.cpp  Instance.hpp
app/src/main/cpp/src/Instance/jni/: jni_Instance.cpp  jni_Instance.hpp
app/src/main/cpp/src/Log/: Log.hpp
app/src/main/cpp/src/MemTool/: MemTool.cpp  MemTool.hpp
app/src/main/cpp/src/Minecraft/: Signature.cpp  Signature.hpp  Utils.cpp  Utils.hpp
app/src/main/cpp/src/Minecraft/Event/: EventDispatch.cpp  EventDispatch.hpp
app/src/main/cpp/src/Minecraft/Event/Events/: Event.cpp  Event.hpp  EventId.hpp  ModuleLoadEvent.cpp  ModuleLoadEvent.hpp  NativeActivityCreateEvent.cpp  NativeActivityCreateEvent.hpp  NativeInputEvent.cpp  NativeInputEvent.hpp  NativeInputQueueCreateEvent.cpp  NativeInputQueueCreateEvent.hpp  NativeInputQueueDestroyEvent.cpp  NativeInputQueueDestroyEvent.hpp  NativeWindowCreateEvent.cpp  NativeWindowCreateEvent.hpp  NativeWindowDestroyEvent.cpp  NativeWindowDestroyEvent.hpp  eglSwapBuffersEvent.cpp  eglSwapBuffersEvent.hpp
app/src/main/cpp/src/Minecraft/Hook/: Hook.cpp  Hook.hpp
app/src/main/cpp/src/Module/: GUIModule.cpp  GUIModule.hpp  Module.cpp  Module.hpp
app/src/main/cpp/src/Module/Config/: Config.cpp  Config.hpp  ConfigHelper.cpp  ConfigHelper.hpp
app/src/main/cpp/src/Module/Event/: Event.hpp  EventId.hpp
app/src/main/cpp/src/Module/GUI/: GUI.cpp  GUI.hpp  GUITYPE.hpp
app/src/main/cpp/src/Module/GUI/Control/: CHECKBOX.cpp  CHECKBOX.hpp  CheckBox.cpp  CheckBox.hpp
app/src/main/cpp/src/Module/GUI/Draw/: Draw.cpp  Draw.hpp  Mutex.cpp  Mutex.hpp
app/src/main/cpp/src/Module/GUI/Draw/ImGuiDraw/: ImGuiDraw.cpp  ImGuiDraw.hpp
app/src/main/cpp/src/Module/GUI/Draw/Touch/: ImGuiBridge.cpp  Touch.cpp
app/src/main/cpp/src/Module/GUI/Manager/: Manager.cpp  Manager.hpp
app/src/main/cpp/src/Module/Manager/: Manager.cpp  Manager.hpp  ModuleManager.cpp  ModuleManager.hpp
app/src/main/cpp/src/Module/Menu/: Menu.hpp
app/src/main/cpp/src/Script/: Script.cpp  Script.hpp
app/src/main/cpp/src/Test/: Test.cpp  Test.hpp
app/src/main/cpp/src/Utils/: Utils.cpp  Utils.hpp
app/src/main/java/com/shenmo/mineraft_toolbox/: MainActivity.kt  XposedMain.kt
app/src/main/java/com/shenmo/mineraft_toolbox/instance/: instance.kt
app/src/main/java/com/shenmo/mineraft_toolbox/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/shenmo/mineraft_toolbox/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
